--- a/style.css
+++ b/style.css
@@ -419,3 +419,43 @@ p > a {
     flex-wrap: wrap;
   }
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin: auto;
+  width: calc(100vw - 60%);
+}
+.form > input {
+  border-radius: 4px;
+  border: 1px solid rgb(126, 126, 126);
+  padding: 10px;
+  background: transparent;
+  color: white;
+  outline: none;
+  width: 100%;
+}
+
+input:focus {
+  border: 1px solid white;
+}
+.submit {
+  background-color: transparent;
+  color: white;
+  border: 1px solid rgb(126, 126, 126);
+  border-radius: 4px;
+  padding: 5px 20px;
+  margin-bottom: 20px;
+  font-family: "Courier New", Courier, monospace;
+}
+.submit:hover {
+  border: 1px solid white;
+}
+
+@media screen and (max-width: 768px) {
+  .form {
+    width: calc(100vw - 30%);
+  }
+}
