--- a/style.css
+++ b/style.css
@@ -120,12 +120,13 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  background: url(./Assets/vector-illustration-maha-shivratri-hindu-festival-celebrated-lord-shiva_695987-1279.jpg);
+  border-top: 1px solid white;
+  /* background: url(./Assets/vector-illustration-maha-shivratri-hindu-festival-celebrated-lord-shiva_695987-1279.jpg);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-position: center;
+  background-position: center; */
 }
 .footerFixed {
   bottom: 0px;
@@ -466,8 +467,7 @@ input:focus {
   transition: transform 0.7s;
   transform: scale(1);
 }
-.logos {
-}
+
 @media screen and (max-width: 768px) {
   .form {
     width: calc(100vw - 30%);
@@ -479,10 +479,7 @@ input:focus {
 .projectsContainer {
   width: max-content;
 }
-.flexWrapCustom{
-  
-  
-}
+
 
 @media screen and (min-width: 992px) {
   .flexWrapCustom{
